@@ -1,6 +1,7 @@
 06.2011 CEST jumpin.banana
 	* tag suggest was not working correctly.
 	* tag rename feature implemented
+	* tag rename case sensitiv problem
 	
 Tue Jul 14 21:38 EST 2009  Luke Reeve   <luke@neuro-tech.net>
 
